fix: scrollbar appearance for firefox and all browsers.

--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -119,6 +119,7 @@
 #menu-item-list {
   height: 0;
   margin-top: 10px;
+  overflow: auto;
 }
 
 #sidebar-content-wrapper {
