--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,27 @@
 @import "./scss/custom_variables";
 @import "./scss/style-rtl";
 @import "~@ng-select/ng-select/themes/default.theme.css";
+@import "scss/custom_mixin";
+
+* {
+  //noinspection CssUnknownProperty
+  scrollbar-color: rgba(0, 0, 0, .2) hsla(0, 0%, 100%, .1);
+  //noinspection CssUnknownProperty
+  scrollbar-width: thin
+}
+
+::-webkit-scrollbar {
+  width: 6px !important;
+  height: 6px !important
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, .2)
+}
+
+::-webkit-scrollbar-track {
+  background: hsla(0, 0%, 100%, .1)
+}
 
 html, body {
   background-color: $gray-100;
